Case-1/K8S/ClusterIP config (error 404 in path other than root))/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservices
  template:
    metadata:
      labels:
        app: authservices
    spec:
      containers:
        - name: authservices
          image: mystald/authservices:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: case1-auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authservices
  ports:
    - name: authservices
      protocol: TCP
      port: 80
      targetPort: 80
