Case-1/K8S/ClusterIP config (error 404 in path other than root))/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - host: project.com
      http:
        paths:
          - pathType: Prefix
            path: /enrollment
            backend:
              service:
                name: case1-enrollment-clusterip-srv
                port:
                  number: 80
          - pathType: Prefix
            path: /payment
            backend:
              service:
                name: case1-payment-clusterip-srv
                port:
                  number: 80
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: case1-auth-clusterip-srv
                port:
                  number: 80
